[workspace]
members = [
    "common",
    "compound-v2",
    "erc20-holdings",
    "network",
    "erc20-price",
    "erc20-market-cap",
    "erc721",
    "eth-balance",
    "substreams-helper",
    "uniswap-v2",
    "solana-sample",
d    "sol-balance",
]
exclude = ["messari-cli"]

[workspace.dependencies]
substreams = "0.3.2"
substreams-ethereum = "0.6.2"
substreams-solana = "0.2.0"

[build]
target = "wasm32-unknown-unknown"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
