[workspace]
members = [
    "common",
    "compound-v2",
    "erc20-holdings",
    "network",
    "erc20-price",
    "erc20-market-cap",
    "erc721",
    "eth-balance",
    "substreams-helper",
    "uniswap-v2",
    "solana-sample",
    "ens-names",
    "eth-supply",
    "uniswap-v3",
]
exclude = ["messari-cli"]

[workspace.dependencies]
substreams = "0.5.0"
substreams-ethereum = "0.8.0"
substreams-solana = "0.1.0"

[build]
target = "wasm32-unknown-unknown"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
