[package]
name = "substreams-erc20-holdings"
version = "0.1.0"
description = "Messari's standardized substream for erc20 account holdings"
edition = "2021"
repository = "https://github.com/messari/substreams/"

[lib]
crate-type = ["cdylib"]

[target.wasm32-unknown-unknown.dependencies]
ethabi = "17.0"
hex-literal = "0.3.4"
prost = "0.11.0"
substreams = { workspace = true}
substreams-ethereum = { workspace = true}
substreams-helper = { path = "../substreams-helper" }

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-common = { path = "../common" }
prost = "0.11.0"