[package]
name = "erc20-price-substreams"
version = "0.0.1"
description = "Price all ERC20 tokens."
edition = "2021"
repository = "https://github.com/messari/substreams/erc20-price"

[lib]
crate-type = ["cdylib"]

[target.wasm32-unknown-unknown.dependencies]
prost = "^0.11.0"
substreams = "~0.0.20"
substreams-ethereum = "~0.2.0"
substreams-helper = { path = "../substreams-helper" }
