[package]
name = "erc20-price-substreams"
version = "0.0.1"
description = "Price all ERC20 tokens."
edition = "2021"
repository = "https://github.com/messari/substreams/erc20-price"

[lib]
crate-type = ["cdylib"]

[target.wasm32-unknown-unknown.dependencies]
ethabi = "17.0"
prost = "^0.11.0"
hex-literal = "0.3.4"
substreams.workspace = true
substreams-ethereum.workspace = true
substreams-helper = { path = "../substreams-helper" }
lazy_static = "1.4.0"

[build-dependencies]
anyhow = "1"
substreams-common = { path = "../common" }

[dependencies]
lazy_static = "1.4.0"
