[package]
name = "substreams-erc721"
version = "0.1.0"
description = "Messari's standardized substream for erc721"
edition = "2021"
repository = "https://github.com/messari/substreams/erc721"

[lib]
crate-type = ["cdylib"]

[target.wasm32-unknown-unknown.dependencies]
ethabi = "17.0"
hex-literal = "0.3.4"
prost = "^0.11.0"
substreams = "~0.0.20"
substreams-ethereum = "0.2.2-rc.2"

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.2.2-rc.2"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
