[package]
name = "eth-balance"
version = "0.1.0"
description = "Messari's standardized substream for wallets eth balance"
edition = "2021"
repository = "https://github.com/messari/substreams/eth-balance"

[lib]
crate-type = ["cdylib"]

[target.wasm32-unknown-unknown.dependencies]
prost = "0.11.2"
ethabi = "17.2.0"
num-bigint = "0.4"
hex-literal = "0.3.4"
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
substreams-helper = { path = "../substreams-helper" }

[build-dependencies]
anyhow = "1"
substreams-common = { path = "../common" }