[package]
name = "messari-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
dialoguer = { git="https://github.com/robinbernon/dialoguer", branch="replace_prompt_when_finished", features=["fuzzy-select"] }
reqwest = { version = "0.11.12", features = ["blocking"] }
clap = { version = "4.0.15", features = ["derive"] }
serde = { version="1.0.144", features=["derive"] }
linked-hash-map = "0.5.6"
strum_macros = "0.24.3"
lazy_static = "1.4.0"
serde_json = "1.0.85"
cargo-edit = "0.11.5"
yaml-rust = "0.4.5"
spinners = "4.1.0"
pathdiff = "0.2.1"
semver = "1.0.14"
strum = "0.24.1"
regex = "1.6.0"
url = "2.3.1"
parquet = "35.0.0"
rust-s3 = "0.32.3"
futures = "0.3.27"
bytes = "1.4.0"
prost = "0.11.6"
prost-types = "0.11.6"
tokio = { version ="1.25.0", features = ["macros", "rt-multi-thread", "fs"] }
tonic = { version = "0.8.3", features = ["tls-roots", "gzip"] }
rand = "0.8.5"
derives = { path= "derives" }

#[dev-dependencies]
#rand = "0.8.5"
#rand_derive2 = { version="0.1.18", path= "test_data_derive" }

[[bin]]
name = "messari"
path = "src/main.rs"
