[package]
name = "network"
version = "0.1.0"
description = "Substreams for Messari tracked networks"
edition = "2021"
repository = "https://github.com/messari/substreams/network"

[dependencies]
substreams-helper = { path = "../substreams-helper" }
substreams-ethereum = { workspace = true }
substreams = { workspace = true }
ethabi = "17.2.0"
hex-literal = "0.3.4"
prost = "0.11.5"
substreams-entity-change = "0.3.0"

[build-dependencies]
anyhow = "1.0.68"
substreams-common = { path = "../common" }

[lib]
crate-type = ["cdylib"]
