[package]
name = "parquet-test"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0.69"
bytes = "1.4.0"
futures = "0.3.26"
http = "0.2.8"
parquet = "32.0.0"
parquet_derive = "34.0.0"
prost = "0.11.6"
prost-types = "0.11.6"
rand = "0.8.5"
tokio = { version ="1.25.0", features = ["macros", "rt-multi-thread", "fs"] }
tonic = { version = "0.8.3", features = ["tls-roots", "gzip"] }
