[package]
name = "sol-balance"
version = "0.1.0"
description = "Messari's substream for solana SOL balances"
edition = "2021"
repository = "https://github.com/messari/substreams"

[lib]
crate-type = ["cdylib"]

[dependencies]
bs58 = "0.4.0"
prost = "0.11.2"
ethabi = "17.2.0"
num-bigint = "0.4"
hex-literal = "0.3.4"
substreams = "0.0.11"
substreams-solana = "0.1.0"
substreams-helper = { path = "../substreams-helper" }

[build-dependencies]
anyhow = "1"
substreams-common = { path = "../common" }