[package]
name = "solana-sample"
version = "0.1.0"
description = "Sample substreams for Solana"
edition = "2021"
repository = "https://github.com/messari/substreams/solana-sample"

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
substreams = { workspace = true }
substreams-solana = { workspace = true }
ethabi = "17.2.0"
hex-literal = "0.3.4"
prost = "0.11.0"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
prost-build = "0.10.1"
