[package]
name = "substreams-helper"
description = "Substreams Helper Crate - by Messari"
version = "0.0.2"
edition = "2021"
license = "MIT"
homepage = "https://messari.io/"
repository = "https://github.com/substreams/substreams-helper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.wasm32-unknown-unknown.dependencies]
ethabi = "17.0"
hex = "0.4.3"
hex-literal = "0.3.4"
prost = "^0.11.0"
num-bigint = "0.4"
bigdecimal = "0.3"
pad = "0.1"
substreams-ethereum = "~0.2.0"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
#getrandom = { version = "0.2", features = ["custom"] }
