[package]
name = "substreams-helper"
description = "Substreams Helper Crate - by Messari"
version = "0.0.2"
edition = "2021"
license = "MIT"
homepage = "https://messari.io/"
repository = "https://github.com/messari/substreams/substreams-helper"

[target.wasm32-unknown-unknown.dependencies]
ethabi = "17.0"
hex = "0.4.3"
hex-literal = "0.3.4"
prost = "^0.11.0"
num-bigint = "0.4"
bigdecimal = "0.3"
pad = "0.1"
tiny-keccak = { version = "2.0", features = ["keccak"] }
substreams = "~0.0.20"
substreams-ethereum = "0.2.2-rc.2"

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.2.2-rc.2"
