[package]
name = "synthetix"
version = "0.1.0"
description = "A substream that calculates the current eth supply"
edition = "2021"
repository = "https://github.com/messari/substreams/synthetix"

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4"
num-bigint = "0.4"
prost = "0.11.6"
hex-literal = "0.3.4"
ethabi = "17.2.0"
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
substreams-helper = { path = "../substreams-helper" }
substreams-entity-change = "1.1.0"

[build-dependencies]
anyhow = "1.0.69"
substreams-common = { path = "../common" }
