[package]
name = "substreams-uniswap-v2"
version = "0.1.0"
description = "Messari's standardized substream for Uniswap v2"
edition = "2021"
repository = "https://github.com/messari/substreams/"

[lib]
crate-type = ["cdylib"]

[target.wasm32-unknown-unknown.dependencies]
ethabi = "17.0"
hex = "0.4.3"
hex-literal = "0.3.4"
prost = "^0.11.0"
num-bigint = "0.4"
bigdecimal = "0.3"
pad = "0.1"
substreams = "~0.0.20"
substreams-ethereum = "0.2.2-rc.2"
substreams-helper = { path = "../substreams-helper" }

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.2.2-rc.2"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"