[package]
name = "substreams-uniswap-v2"
version = "0.1.0"
description = "Messari's standardized substream for Uniswap v2"
edition = "2021"
repository = "https://github.com/messari/substreams/"

[lib]
crate-type = ["cdylib"]

[dependencies]
ethabi = "17.0"
hex = "0.4.3"
hex-literal = "0.3.4"
prost = "^0.11.0"
pad = "0.1"
substreams.workspace = true
substreams-ethereum.workspace = true
substreams-helper = { path = "../substreams-helper" }
substreams-entity-change = "0.3.0"

[build-dependencies]
anyhow = "1"
substreams-common = { path = "../common" }
