[package]
name = "substreams-uniswap-v3"
version = "0.1.0"
description = "Messari's standardized substream for Uniswap v3"
edition = "2021"
repository = "https://github.com/messari/substreams/"

[lib]
crate-type = ["cdylib"]

[dependencies]
ethabi = "17.0"
hex = "0.4.3"
hex-literal = "0.3.4"
prost = "^0.11.0"
pad = "0.1"
substreams.workspace = true
substreams-ethereum.workspace = true
substreams-helper = { path = "../substreams-helper" }
substreams-entity-change = {git = "https://github.com/streamingfast/substreams-entity-change/", branch = "develop"}
strum = "0.24.1"
strum_macros = "0.24.3"
base64 = "0.21.0"
lazy_static = "1.4.0"
clippy = "0.0.302"

[build-dependencies]
anyhow = "1"
substreams-common = { path = "../common" }
